Added authentication areaé

--- a/MyAccount/Views/Home/Index.cshtml
+++ b/MyAccount/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Overview</h2>
 
-@Html.ActionLink("Logout", "Signout", "Account")
+@Html.ActionLink("Logout", "Signout", "Account", new { area = "Authentication" }, null)
 
 <table align="center">
     <tr>
