Added Account form page

--- a/MyAccount/Views/Shared/_Layout.cshtml
+++ b/MyAccount/Views/Shared/_Layout.cshtml
@@ -70,10 +70,10 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li class="active">
-                        <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                        @Html.ActionLink("Dashboard", "Index", "Home", new { area = "" }, new { @class = "fa fa-fw fa-dashboard" })
                     </li>
                     <li>
-                        <a href="charts.html"><i class="fa fa-fw fa-bar-chart-o"></i> Charts</a>
+                        @Html.ActionLink("Accounts", "Index", "Account", new { area = "" }, new { @class= "fa fa-fw fa-bar-chart-o" })
                     </li>
                     <li>
                         <a href="tables.html"><i class="fa fa-fw fa-table"></i> Tables</a>
