--- a/MyAccount/Views/Home/Index.cshtml
+++ b/MyAccount/Views/Home/Index.cshtml
@@ -3,35 +3,164 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Overview</h2>
+<div class="container-fluid">
 
-@Html.ActionLink("Logout", "Signout", "Authentication", new { area = "Authentication" }, null)
+    <!-- Page Heading -->
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">
+                Dashboard <small>Statistics Overview</small>
+            </h1>
+            <ol class="breadcrumb">
+                <li class="active">
+                    <i class="fa fa-dashboard"></i> Dashboard
+                </li>
+            </ol>
+        </div>
+    </div>
+    <!-- /.row -->
 
-<table align="center">
-    <tr>
-        <th>Accounts</th>
-    </tr>
-    <tr>
-        <td>
-            @using (Html.BeginForm())
+    <div class="row">
+        <div class="col-lg-2">
+            <label for="bank_account_select">Bank account</label>
+        </div>
+        <div class="col-lg-10">
+            <div class="form-group">
+                @using (Html.BeginForm())
             {
-                @Html.DropDownList("account_id", (SelectList)ViewBag.AccountsList, new { onchange = "$(this.form).submit ();" })
-            }
-        </td>
-    </tr>
-</table>
+                    @Html.DropDownList("account_id", (SelectList)ViewBag.AccountsList, new { onchange = "$(this.form).submit ();" })
+                }
+            </div>
+        </div>
 
-<table align="center">
-   <tr>
-       <th colspan="2">Transactions</th>
-   </tr>
-    @{
-        foreach (var transaction in ViewBag.TransactionsList)
-        {
-            <tr>
-                <td>@transaction.name</td>
-                <td>@transaction.value</td>
-            </tr>
-        }
-     }
-</table>
+    </div>
+    <!-- /.row -->
+
+    <div class="row">
+        <div class="col-lg-8">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Evolution Chart</h3>
+                </div>
+                <div class="panel-body">
+                    <ul class="nav nav-tabs">
+                        <li class="active">
+                            <a href="#current">Current month</a>
+                        </li>
+                        <li>
+                            <a href="#previous">Previous month</a>
+                        </li>
+                    </ul>
+                    <div class="tab-content">
+                        <div class="tab-pane fade active in" id="current">
+                            <div id="morris-area-chart"></div>
+                        </div>
+                        <div class="tab-pane fade" id="previous">
+                            <div id="morris-area-chart"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title"><i class="fa fa-money fa-fw"></i> Transactions Panel</h3>
+                </div>
+                <div class="panel-body">
+                    <div class="table-responsive">
+                        <table class="table table-bordered table-hover table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Date</th>
+                                    <th>Title</th>
+                                    <th>Amount</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @{
+                                    foreach (var transaction in ViewBag.TransactionsList)
+                                    {
+                                        <tr>
+                                            <td>@(((DateTime)transaction.date).ToString("MM/dd/yyyy"))</td>
+                                            <td>@transaction.name</td>
+                                            <td>@transaction.value</td>
+                                        </tr>
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="text-right">
+                        <a href="~/Transaction/Index">View All Transactions <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /.row -->
+
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title"><i class="fa fa-long-arrow-right fa-fw"></i> Expenses by Category Chart</h3>
+                </div>
+                <div class="panel-body">
+                    <ul class="nav nav-tabs">
+                        <li class="active">
+                            <a href="#current">Current month</a>
+                        </li>
+                        <li>
+                            <a href="#previous">Current and last month</a>
+                        </li>
+                    </ul>
+                    <div class="tab-content">
+                        <div class="tab-pane fade active in" id="current">
+                            <div id="morris-donut-chart"></div>
+                        </div>
+                        <div class="tab-pane fade" id="previous">
+                            <div id="morris-area-chart"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title"><i class="fa fa-money fa-fw"></i> Transactions Panel</h3>
+                </div>
+                <div class="panel-body">
+                    <div class="table-responsive">
+                        <table class="table table-bordered table-hover table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Date</th>
+                                    <th>Title</th>
+                                    <th>Amount</th>
+                                    <th>Total prevision</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @{
+                                    foreach (var transaction in ViewBag.InvalidatedTransactionsList)
+                                    {
+                                        <tr>
+                                            <td>@(((DateTime)transaction.date).ToString("MM/dd/yyyy"))</td>
+                                            <td>@transaction.name</td>
+                                            <td>@transaction.value</td>
+                                        </tr>
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="text-right">
+                        <a href="#">Open calendar view <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /.row -->
