--- a/MyAccount/Views/Account/Index.cshtml
+++ b/MyAccount/Views/Account/Index.cshtml
@@ -3,37 +3,73 @@
     ViewBag.Title = "Account";
 }
 
-<h2>Account</h2>
+<div class="container-fluid">
+    <!-- Page Heading -->
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">
+                Tables
+            </h1>
+            <ol class="breadcrumb">
+                <li>
+                    <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a>
+                </li>
+                <li class="active">
+                    <i class="fa fa-table"></i> Tables
+                </li>
+            </ol>
+        </div>
+    </div>
+    <!-- /.row -->
+    <div class="row">
 
-<table align="center">
-    @using (Html.BeginForm())
-    {
-        <tr>
-            <td colspan="2">
-                @Html.ValidationMessage("error")
-            </td>
-        </tr>
-        <tr>
-            <td>
-                @Html.TextBox("name")
-                @Html.ValidationMessage("name")
-            </td>
-            <td>
-                @Html.TextBox("value")
-                @Html.ValidationMessage("value")
-            </td>
-            <td>
-                <input type="submit" value="Add"/>
-            </td>
-        </tr>
-    }
-    @{
-        foreach (var account in ViewBag.AccountsList)
-        {
-            <tr>
-                <td>@account.name</td>
-                <td>@account.value</td>
-            </tr>
-        }
-    }
-</table>
+        <div class="form-group">
+            @using (Html.BeginForm("Index", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
+                <div class="col-lg-1">
+                    @Html.Label("Name : ")
+                </div>
+                <div class="col-lg-4">
+                    @Html.TextBox("name", "", new { @class = "form-control" })
+                    @Html.ValidationMessage("name")
+                </div>
+                <div class="col-lg-1">
+                    @Html.Label("Value : ")
+                </div>
+                <div class="col-lg-4">
+                    @Html.TextBox("value", "", new { @class = "form-control" })
+                    @Html.ValidationMessage("value")
+                </div>
+                <div class="col-lg-2">
+                    <button type="submit" class="btn btn-default">Add</button>
+                </div>
+            }
+  
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="table-responsive">
+                <table class="table table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Value</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @{
+                            foreach (var account in ViewBag.AccountsList)
+                            {
+                                <tr>
+                                    <td>@account.name</td>
+                                    <td>@account.value</td>
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
