--- a/MyAccount/Views/Account/Index.cshtml
+++ b/MyAccount/Views/Account/Index.cshtml
@@ -15,7 +15,7 @@
                     <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a>
                 </li>
                 <li class="active">
-                    <i class="fa fa-table"></i> Tables
+                    <i class="fa fa-table"></i> Accounts
                 </li>
             </ol>
         </div>
